package gribCollectionIndex;

option java_package = "ucar.nc2.grib.collection";
option java_outer_classname = "GribCollectionProto";

message Record {
  required uint32 fileno = 1;  // index into GribCollectionIndex.files
  required uint64 pos = 2;     // offset in Grib file of the start of drs (grib2) or entire message (grib1)
  optional uint64 bmsPos = 3 [default = 0]; // use alternate bms
}

// dont need SparseArray unless someone wants to read from the variable
message SparseArray {
  required fixed32 cdmHash = 1; // which variable
  repeated uint32 size = 2;     // multidim sizes
  repeated uint32 track = 3;    // 1-based index into record list, 0 == missing
  repeated Record records = 4;  // List<Record>
}

///////////////////////////////////////////////////////////////////////////

// info to construct the ncfile metadata
message Variable {
  required uint32 discipline = 9;
  required bytes pds = 1;
  required fixed32 cdmHash = 2;

  required uint64 recordsPos = 3;  // offset of SparseArray message for this Variable
  required uint32 recordsLen = 4;  // size of SparseArray message for this Variable (could be in stream instead)

  repeated uint32 coordIdx = 5;    // index into Group.coords

  // partitions
  repeated uint32 groupno = 6;
  repeated uint32 varno = 7;
  repeated int32 flag = 8;
}

message Coord {
  required int32 code = 1;
  required string unit = 2;
  repeated float values = 3;
  repeated float bound = 4; // only used if interval, then = (value, bound)
  optional int32 index = 5  [default = -1];  // safety check
}

message Parameter {  // copied from ncStream.proto
  required string name = 1;
  repeated double data = 2;
  optional string sdata = 3; // used for string data
}

message MFile {
  required string filename = 1;   // reletive to topDir
  required uint64 lastModified = 2;
}

message Group {
  optional int32 predefinedGds = 1;   // predefined GDS code, defined by center
  optional bytes gds = 2;             // all variables in the group use the same GDS
  optional sint32 gdsHash = 3 [default = 0];
  optional string name = 4;         // only when user overrides default name

  repeated Variable variables = 5;    // list of variables
  repeated Coord coords = 6;          // list of coordinates
  repeated Parameter params = 7;      // group attributes  used ??
  repeated int32 fileno = 8;          // the component files that are in this group, index into gc.files

  // partitions
  repeated TimeCoordUnion timeCoordUnions = 9; // partitions only
}

message GribCollectionIndex {
  required string name = 1;       // must be unique - index filename is name.ncx
  required string topDir = 2;   // filenames are reletive to this
  repeated MFile mfiles = 3;    // list of grib MFiles
  repeated Group groups = 4;      // separate group for each GDS
  repeated Parameter params = 5;  // global attributes

  required int32 center = 6;      // these 4 fields are to get a GribTable object
  required int32 subcenter = 7;
  required int32 master = 8;
  required int32 local = 9;       // grib1 table Version

  optional int32 genProcessType = 10;   // why ??
  optional int32 genProcessId = 11;
  optional int32 backProcessId = 12;

  // partitions only
  repeated Partition partitions = 13;
}

message TimeCoordUnion { // extends Coord
  required int32 code = 1;
  required string unit = 2;
  repeated float values = 3;
  repeated float bound = 4; // only used if interval, then = (value, bound)

  repeated int32 partition = 5; // starting index, inclusive
  repeated int32 index = 6; // ending index, exclusive
}

message Partition {
  required string name = 1;       // name is used in TDS - eg the subdirectory when generated by TimePartitionCollections
  required string filename = 2;   // the gribCollection.ncx file
  optional uint64 lastModified = 3;
}


//  cd c:/dev/github/thredds/grib/src/main/java
//  protoc --proto_path=. --java_out=. ucar/nc2/grib/collection/gribCollection2.proto